--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
 pycryptodomex==3.20.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+idna==3.7
+pycryptodomex==3.20.0
+requests==2.32.2
+urllib3==2.2.1
